[package]
name = "baseball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde_json = "1.0"
fake = { version = "2.5", features=['derive', 'uuid']}
serde = { version = "1.0", features = ['derive'] }
uuid = { version = "1.3.0",  features =[ "v4", "fast-rng", "macro-diagnostics"]}
clap = { version = "4.1.8", features = ["derive"] }
